--- a/frontend/src/styles/CadastroAlunos.css
+++ b/frontend/src/styles/CadastroAlunos.css
@@ -13,12 +13,13 @@
 
 .card {
   margin-top: 30px;
+  background-color: #000;
   display: flex;
   flex-direction: column;
   width: 100%;
   background: #ffffff;
   padding: 10px;
-  border-radius: 16px;
+  border-radius: 19px;
 
   /* Shadowbox moderna */
   box-shadow:
@@ -49,25 +50,30 @@ label {
   grid-column: 1 / -1;
 }
 
+
 input,
 select {
   width: 100%;
   padding: 10px;
   border-radius: 6px;
+  background: #2a2a2a;
+  color: #000;
   border: 1px solid #ccc;
   outline: none;
+  
 }
 
 input:focus,
 select:focus {
-  border-color: #2e7d32;
-  box-shadow: 0 0 0 2px rgba(46, 125, 50, 0.2);
+  border-color: #4a90e2;
 }
 
-form {
+.form {
+  box-shadow:none;
   display: flex;
   flex-direction: column;
   gap: 18px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .form-group {
