--- a/frontend/src/styles/CadastroAlunos.css
+++ b/frontend/src/styles/CadastroAlunos.css
@@ -13,32 +13,19 @@
 
 .card {
   margin-top: 30px;
-  background-color: #000;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 900px;
-  background: #ffffff;
-  padding: 10px;
+  max-width: 90vw;
+  padding: 20px;
   border-radius: 19px;
-
-  /* Shadowbox moderna */
-  box-shadow:
-    0 5px 5px rgba(0, 0, 0, 0.12),
-    0 4px 5px rgba(0, 0, 0, 0.08);
 }
 
 h1 {
   text-align: center;
-  margin-bottom: 5px;
-  font-size: 20px;
-}
-
-h2 {
-  text-align: center;
-  font-weight: normal;
-  color: #666;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
+  font-size: 22px;
 }
 
 label {
@@ -47,8 +34,13 @@ label {
   margin-bottom: 6px;
 }
 
-.full-width {
-  grid-column: 1 / -1;
+input#nome , #telefone, #email, #dataNascimento, #documento, #dataCadastro, #endereco, #escolaridade {
+  background-color: #102946;
+  color: #fff;
+}
+
+input::placeholder {
+  color: #fff;
 }
 
 input,
@@ -59,13 +51,8 @@ select {
   border: 1px solid #ccc;
   outline: none;
   text-align: center;
-}
-
-input#nome, #email, #telefone, #dataNascimento, #cpf, #rg, #endereco, #dataCadastro, #escolaridade {
   font-family: 'Poppins', sans-serif;
   font-size: 1.2rem;
-  background: #ccc;
-  color: black;
 }
 
 input:focus,
@@ -74,65 +61,48 @@ select:focus {
 }
 
 .form {
-  box-shadow:none;
   display: flex;
-  align-self: center;
-  max-width: 80vw;
   flex-direction: column;
+  gap: 20px;
+  box-shadow: none;
   color: #000;
-  gap: 18px;
-  font-family: 'Poppins', sans-serif;
-}
-
-.form-group {
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: row;
 }
 
 .grid {
   display: grid;
-  max-width: 100vw;
-  gap: 3vh;
-  margin: 0 auto;
+  gap: 20px;
+  margin-bottom: 10px;
 }
 
 .grid-2 {
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .grid-3 {
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .checkbox-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 4px;
-}
-
-.checkbox {
-  font-weight: normal;
+  gap: 8px;
 }
 
 .cadastro-btn {
   align-self: center;
-  margin-top: 30px;
+  margin-top: 20px;
   width: 30%;
   padding: 14px;
-  font-size: 20px;
+  font-size: 22px;
   border-radius: 10px;
   border: none;
   background: #4a90e2;
   color: white;
   cursor: pointer;
-
-  /* sombra no botão */
-  box-shadow: 0 3px 14px #000;
-  transition: transform 0.2s, box-shadow 0.2s;
+  transition: all 0.3s ease
 }
 
 .cadastro-btn:hover {
   transform: translateY(-2px);
-  box-shadow: 0 6px 20px #000;
+  box-shadow: 0 3px 10px #000;
 }
