--- a/frontend/src/styles/Cursos.css
+++ b/frontend/src/styles/Cursos.css
@@ -1,4 +1,5 @@
 .cursos-container {
+  margin: 10vh 0 0 5vw;
   padding: 25px;
   color: white;
 }
@@ -6,10 +7,10 @@
 .cursos-table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 18px;
+  margin-top: -7vh;
   background: rgba(255,255,255,0.05);
   border-radius: 10px;
-  overflow: hidden;
+  transform: scale(0.8);
 }
 
 .cursos-table th,
