--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -279,51 +279,36 @@
     display: flex;
     flex-direction: column;
     padding-top: 20px;
-    padding: 0.8vh;
+    padding: 1.5vh;
   }
 
   .menu-item {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-
-    padding: 15px 20px;
-    cursor: pointer;
-    transition: background 0.2s ease;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 2vh 1vw;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  color: #ffffff;
+  border-radius: 8px;
+  text-align: left;
   }
 
+  /* Hover (passar o mouse) */
   .menu-item:hover {
+    color: #4da6ff;
+  }
+
+  /* Ativo (clicado/selecionado) */
+  .menu-item.active {
     background-color: #2d3a62;
+    color: #4da6ff;
   }
 
   .item-text {
     font-size: 14px;
     opacity: 0;
     animation: fadeIn 0.3s forwards;
-  }
-
-  .nav-footer {
-    display: flex;
-    position: relative;
-    padding: 1vh;
-    justify-content: center;
-  }
-
-  #footer-logo {
-    width: 50px;
-    height: auto;
-    margin: 0 auto;
-    transition: all 0.5s ease;
-  }
-
-  #footer-logo:hover {
-    transform: translateY(-1vh);
-  }
-
-  .nav-footer h3 {
-    font-family: 'Inter', sans-serif;
-    font-size: 8px;
-    margin-top: -0.5vh;
   }
 
   /* ----- ANIMAÇÃO ----- */
