Adicionada função excluir para a pagina de 'Cursos'

--- a/frontend/src/styles/Cursos.css
+++ b/frontend/src/styles/Cursos.css
@@ -77,3 +77,7 @@ input, select {
   color: white;
   font-weight: 600;
 }
+.btn-delete:hover {
+  background-color: #ff3b3b;
+  transform: scale(1.05);
+}
